tests/cases/ok/native_math.p4
import math

def main() -> None:
    print(math.abs(-5))
    print(math.abs(7))
    print(math.abs(-2.5))
