tests/cases/fail/module_private_value_access.p4
import module_private_value_access_helpers

def main() -> None:
    print(module_private_value_access_helpers._seed)
